navbar - overflow fix 4

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -78,13 +78,14 @@ nav {
     }
 }
 
+/*768px*/
 @media screen and (max-width: 900px) {
-    body {
-        overflow: hidden;
+    html, body {
+        overflow: hidden !important;
     }
 
     .main-site {
-        overflow: hidden;
+        overflow: hidden !important;
     }
 
     .nav-links {
@@ -99,7 +100,7 @@ nav {
         width: 100%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
-        overflow: hidden;
+        overflow: hidden !important;
     }
 
     .nav-links li {
